# nous

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  MULTI_ACCOUNT_FOUNDATION.md  PRICING_MODEL.md  PRIVACY_MODEL.md  README.md  SECURITY.md  docker-compose.yaml  nous.env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proply.env.example  update.sh
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  config.yml
.github/workflows/: build-containers.yml
apps/api/: Dockerfile  package.json
apps/cli/: README.md  package.json
apps/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
apps/mcp/: package.json
apps/worker/: Dockerfile  package.json
docs/: README.md  adaptive-lead-scoring.md  claims.md  claude-org-preferences.md  compound-intelligence-mind.md  context-api-spec.md  context-graph.md  crm-hygiene-phase-1b-spec.md  crm-hygiene-phase-2-spec.md  crm-setup.md  crm-sync.md  deal-health-score.md  enrichment-history-backfill.md  enrichment-waterfall.md  facts.md  how-nous-resolves-identity.md  icp-and-gtm-context.md  icp-from-closed-deals.md  icp-rich-model.md  icp-scoring-and-enrichment.md  icp-scoring-internals.md  icp-scoring.md  identity-resolution.md  intent-score.md  leads-status-check.md  pipeline-stages.md  relationship-graph.md  schema-audit.md  v2-build-plan.md
docs/decisions/: 0001-empower-the-agent-not-the-interface.md  0002-v1-tables-as-views-over-v2-substrate.md
internal/: charter-diagrams.md  context-api-spec.md  founding-charter.md  use-cases.md
plugins/nous/: README.md
scripts/: cleanup-linkedin-conversation-active.mjs
sdk-python/: README.md  pyproject.toml
sdk-python/nous/: client.py
sdk-python/opennous/: __init__.py  client.py
sdk-python/proply/: __init__.py  client.py
supabase/: patch_selfhost_functions.sql  schema.sql  schema.v2.sql
supabase/migrations/: README.md  (+6 more)
(+317 files in other folders)
