[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proply"
version = "1.0.0"
description = "Official Python SDK for the Proply contact memory API"
license = "MIT"
requires-python = ">=3.9"
keywords = ["proply", "ai", "agents", "crm", "memory", "sdk"]
dependencies = [
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://goproply.com"
Repository = "https://github.com/bennetglinder1/proply-crm"
Documentation = "https://docs.goproply.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["proply*"]
