[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nous"
version = "1.0.0"
description = "Official Python SDK for the Nous contact memory API"
license = "MIT"
requires-python = ">=3.9"
keywords = ["nous", "ai", "agents", "crm", "memory", "sdk"]
dependencies = [
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://opennous.cloud"
Repository = "https://github.com/bennetglinder1/nous"
Documentation = "https://docs.opennous.cloud"

[tool.setuptools.packages.find]
where = ["."]
include = ["nous*"]
