[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opennous"
version = "1.1.0"
description = "Official Python SDK for Nous — GTM data infrastructure for agents"
license = "MIT"
requires-python = ">=3.9"
keywords = ["nous", "opennous", "ai", "agents", "crm", "memory", "sdk", "mcp"]
dependencies = [
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://opennous.cloud"
Repository = "https://github.com/bennetglinder1/nous"
Documentation = "https://docs.opennous.cloud"

[tool.setuptools.packages.find]
where = ["."]
include = ["opennous*"]
